[gd_scene load_steps=2 format=3 uid="uid://de44v8cxi7po5"]

[ext_resource type="Script" path="res://UI/master_ui.gd" id="1_2emhf"]

[node name="master_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2emhf")

[node name="topbar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="topbar"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="topbar/MarginContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="topbar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="scenes_button" type="Button" parent="topbar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Scenes"

[node name="VSeparator2" type="VSeparator" parent="topbar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="properties_button" type="Button" parent="topbar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Properties"

[node name="VSeparator3" type="VSeparator" parent="topbar/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="topbar_label" type="Label" parent="topbar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Demo scene // v0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="topbar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="perf_button" type="Button" parent="topbar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Performance"

[node name="VSeparator5" type="VSeparator" parent="topbar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="scene_list" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 41.0
offset_bottom = 41.0

[node name="MarginContainer" type="MarginContainer" parent="scene_list"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="scene_list/MarginContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="scene_list/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="scene_list/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="blue_plants" type="Button" parent="scene_list/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Blue plants"

[node name="pine_forest" type="Button" parent="scene_list/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Pine forest"

[node name="vert_ext" type="Button" parent="scene_list/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Furball"

[node name="VSeparator2" type="VSeparator" parent="scene_list/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="perf_readout" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 41.0
offset_bottom = 107.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="perf_readout"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="perf_readout/MarginContainer"]
layout_mode = 2

[node name="fps" type="HBoxContainer" parent="perf_readout/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/fps"]
layout_mode = 2
text = "fps"
vertical_alignment = 1

[node name="spacer" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/fps"]
layout_mode = 2
size_flags_horizontal = 3
text = ". . . . . . . . . . . . . . "
vertical_alignment = 2
clip_text = true

[node name="fps_counter" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/fps"]
unique_name_in_owner = true
layout_mode = 2
text = "123.45"
vertical_alignment = 1

[node name="ftime" type="HBoxContainer" parent="perf_readout/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/ftime"]
layout_mode = 2
text = "ftime"
vertical_alignment = 1

[node name="spacer" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/ftime"]
layout_mode = 2
size_flags_horizontal = 3
text = ". . . . . . . . . . . . . . "
vertical_alignment = 2
clip_text = true

[node name="frametime_readout" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/ftime"]
unique_name_in_owner = true
layout_mode = 2
text = "16.67"
vertical_alignment = 1

[node name="Label2" type="Label" parent="perf_readout/MarginContainer/VBoxContainer/ftime"]
layout_mode = 2
text = "ms"
vertical_alignment = 1
